-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
The -r option description in the lustre_rsync usage message is wrong:
m:~# lustre_rsync Please specify changelog consumer registration id. lustre_rsync -s <lustre_root_path> -t <target_path> -m <mdt> -r <user id> -l <status log> lustre_rsync can also pick up parameters from a status log created earlier. lustre_rsync -l <log_file> options: --xattr <yes|no> replicate EAs --abort-on-err abort at first err --verbose --dry-run don't write anything
We should give the short and long options in the help message.
We should also support --help.
Unrecognized options should print the short usage message. Only --help should print the long usage message. And --help should print options to stdout.
- is related to
-
LU-930 Update or improvement to a Lustre man page, documentation, or messages
-
- Open
-